k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-service
spec:
  type: ClusterIP
  selector:
    app: node-label
  ports:
    - port: 80
      targetPort: 3000
